--- a/myapp/package.json
+++ b/myapp/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack"
+    "build": "env TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack",
+    "start": "env TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack-dev-server --open"
   },
   "keywords": [],
   "author": "",
@@ -12,11 +13,13 @@
   "devDependencies": {
     "@types/node": "^13.11.1",
     "@types/webpack": "^4.41.11",
+    "@types/webpack-dev-server": "^3.10.1",
     "ts-loader": "^6.2.2",
     "ts-node": "^8.8.2",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
