--- a/myapp/package.json
+++ b/myapp/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^13.11.1",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
     "@types/webpack": "^4.41.11",
     "@types/webpack-dev-server": "^3.10.1",
     "ts-loader": "^6.2.2",
@@ -21,5 +23,9 @@
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
+  },
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
