--- a/myapp/package.json
+++ b/myapp/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "env TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack",
     "start": "env TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack-dev-server --open"
   },
@@ -11,11 +12,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/html-webpack-plugin": "^3.2.2",
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "@types/react-router-dom": "^5.1.4",
     "@types/webpack": "^4.41.11",
     "@types/webpack-dev-server": "^3.10.1",
+    "html-webpack-plugin": "^4.2.0",
+    "rimraf": "^3.0.2",
     "ts-loader": "^6.2.2",
     "ts-node": "^8.8.2",
     "tsconfig-paths": "^3.9.0",
@@ -26,6 +31,8 @@
   },
   "dependencies": {
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
   }
 }
