--- a/myapp/tsconfig.json
+++ b/myapp/tsconfig.json
@@ -6,6 +6,7 @@
     "allowSyntheticDefaultImports": true,
     "module": "es6",
     "target": "es6",
+    "sourceMap": true,
     "jsx": "react",
     "allowJs": true
   }
