--- a/myapp/package.json
+++ b/myapp/package.json
@@ -21,6 +21,7 @@
     "@types/webpack-dev-server": "^3.10.1",
     "html-webpack-plugin": "^4.2.0",
     "rimraf": "^3.0.2",
+    "style-loader": "^1.1.3",
     "ts-loader": "^6.2.2",
     "ts-node": "^8.8.2",
     "tsconfig-paths": "^3.9.0",
@@ -30,9 +31,11 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "bulma": "^0.8.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "sanitize.css": "^11.0.0"
   }
 }
