--- a/myapp/package.json
+++ b/myapp/package.json
@@ -19,6 +19,7 @@
     "@types/react-router-dom": "^5.1.4",
     "@types/webpack": "^4.41.11",
     "@types/webpack-dev-server": "^3.10.1",
+    "css-loader": "^3.5.2",
     "html-webpack-plugin": "^4.2.0",
     "rimraf": "^3.0.2",
     "style-loader": "^1.1.3",
