--- a/myapp/package.json
+++ b/myapp/package.json
@@ -20,6 +20,7 @@
     "@types/webpack": "^4.41.11",
     "@types/webpack-dev-server": "^3.10.1",
     "css-loader": "^3.5.2",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.2.0",
     "rimraf": "^3.0.2",
     "style-loader": "^1.1.3",
