--- a/myapp/tsconfig.json
+++ b/myapp/tsconfig.json
@@ -8,6 +8,7 @@
     "target": "es6",
     "sourceMap": true,
     "jsx": "react",
-    "allowJs": true
+    "allowJs": false,
+    "typeRoots" : ["./node_modules/@types", "./typings"]
   }
 }
