--- a/myapp/package.json
+++ b/myapp/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.6",
     "@types/html-webpack-plugin": "^3.2.2",
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
@@ -34,6 +35,7 @@
   },
   "dependencies": {
     "bulma": "^0.8.2",
+    "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
