--- a/myapp/package.json
+++ b/myapp/package.json
@@ -36,8 +36,12 @@
     "bulma": "^0.8.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-router-redux": "^4.0.8",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "sanitize.css": "^11.0.0"
   }
 }
