--- a/myapp/package.json
+++ b/myapp/package.json
@@ -12,8 +12,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.6",
     "@types/html-webpack-plugin": "^3.2.2",
+    "@types/koa": "^2.11.3",
+    "@types/koa-router": "^7.4.0",
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
@@ -35,7 +36,8 @@
   },
   "dependencies": {
     "bulma": "^0.8.2",
-    "express": "^4.17.1",
+    "koa": "^2.11.0",
+    "koa-router": "^8.0.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
