--- a/myapp/package.json
+++ b/myapp/package.json
@@ -6,48 +6,38 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "env TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack",
-    "start:client": "env TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack-dev-server --open",
-    "start:server": "ts-node --project config/tsconfig-server.json src/server",
-    "start": "npm run start:client & npm run start:server"
+    "start": "env TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack-dev-server --open"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/html-webpack-plugin": "^3.2.2",
-    "@types/koa": "^2.11.3",
-    "@types/koa-router": "^7.4.0",
-    "@types/node": "^13.11.1",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
-    "@types/react-router-dom": "^5.1.4",
-    "@types/webpack": "^4.41.11",
-    "@types/webpack-dev-server": "^3.10.1",
-    "css-loader": "^3.5.2",
-    "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^4.2.0",
+    "@types/html-webpack-plugin": "^3.2.4",
+    "@types/node": "^14.14.3",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/webpack": "^4.41.23",
+    "@types/webpack-dev-server": "^3.11.0",
+    "css-loader": "^5.0.0",
+    "file-loader": "^6.1.1",
+    "html-webpack-plugin": "^4.5.0",
     "rimraf": "^3.0.2",
-    "style-loader": "^1.1.3",
-    "ts-loader": "^6.2.2",
-    "ts-node": "^8.8.2",
+    "style-loader": "^2.0.0",
+    "ts-loader": "^8.0.7",
+    "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.8.3",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "typescript": "^4.0.3",
+    "webpack": "^5.2.0",
+    "webpack-cli": "^4.1.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "bulma": "^0.8.2",
-    "koa": "^2.11.0",
-    "koa-router": "^8.0.8",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-router-redux": "^4.0.8",
-    "redux": "^4.0.5",
-    "redux-saga": "^1.1.3",
-    "sanitize.css": "^11.0.0"
+    "bulma": "^0.9.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "sanitize.css": "^12.0.1"
   }
 }
