--- a/myapp/package.json
+++ b/myapp/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "env TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack",
-    "start": "env TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack serve"
+    "start": "env TS_NODE_PROJECT=tsconfig-for-webpack-config.json webpack-dev-server --open"
   },
   "keywords": [],
   "author": "",
@@ -29,10 +29,11 @@
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.3",
     "webpack": "^5.2.0",
-    "webpack-cli": "^4.1.0",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
     "bulma": "^0.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
